[gd_scene load_steps=2 format=3 uid="uid://c3wl2ous3fp0s"]

[ext_resource type="Script" uid="uid://beh0enwpnonvp" path="res://scripts/ui/options_menu.gd" id="1_j7wse"]

[node name="OptionsMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_j7wse")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -220.0
offset_right = 280.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Opciones"
horizontal_alignment = 1

[node name="MusicRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/MusicRow"]
layout_mode = 2
text = "Música"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/MusicRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ValueLabel" type="Label" parent="Panel/VBoxContainer/MusicRow"]
layout_mode = 2
text = "40%"
horizontal_alignment = 2

[node name="SfxRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/SfxRow"]
layout_mode = 2
text = "Efectos"

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/SfxRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ValueLabel" type="Label" parent="Panel/VBoxContainer/SfxRow"]
layout_mode = 2
text = "70%"
horizontal_alignment = 2

[node name="ResolutionRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/ResolutionRow"]
layout_mode = 2
text = "Resolución"

[node name="OptionButton" type="OptionButton" parent="Panel/VBoxContainer/ResolutionRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VsyncRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Panel/VBoxContainer/VsyncRow"]
layout_mode = 2
text = "VSync"

[node name="CheckBox" type="CheckBox" parent="Panel/VBoxContainer/VsyncRow"]
layout_mode = 2
text = "Activado"

[node name="ButtonsRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer/ButtonsRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Guardar"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/ButtonsRow"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Cancelar"

[connection signal="value_changed" from="Panel/VBoxContainer/MusicRow/HSlider" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SfxRow/HSlider" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsRow/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonsRow/CancelButton" to="." method="_on_cancel_button_pressed"]
